--- a/package.json
+++ b/package.json
@@ -39,5 +39,5 @@
   "dependencies": {
     "requestify": "^0.1.16"
   },
-  "icon": "https://raw.githubusercontent.com/n8harris/vscode-slim-to-html/master/src/images/slim-to-html-logo.png"
+  "icon": "https://github.com/n8harris/vscode-slim-to-html/raw/master/src/images/slim-to-html-logo.png"
 }
