chore(extension): Add read only mode to extension for people that want to prevent incorrect diffs

--- a/package.json
+++ b/package.json
@@ -18,6 +18,11 @@
     "keybindings": [
       {
         "command": "extension.slim-to-html",
+        "key": "ctrl+shift+.",
+        "when": "editorTextFocus && editorLangId == 'slim'"
+      },
+      {
+        "command": "extension.slim-to-html-readonly",
         "key": "ctrl+shift+/",
         "when": "editorTextFocus && editorLangId == 'slim'"
       }
